# fvChars

./: README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml  sqlite.db
backend/app/: __init__.py  __main__.py  config.py
backend/app/database/: __init__.py
backend/app/database/models/: __init__.py  character_model.py  user_model.py
backend/app/errors/: title_errors.py  user_errors.py
backend/app/middleware/: sessions.py
backend/app/models/: __init__.py  character_model.py  title_model.py  user_model.py
backend/app/models/crud/: character_crud.py  title_crud.py  user_crud.py
backend/app/routers/v1/: __init__.py  character_controller.py  user_controller.py
backend/app/routes/v1/: __init__.py  character_router.py  title_router.py  user_router.py
backend/app/schemas/: character_schema.py  default_schema.py  generic_responses.py  title_schema.py  user_responses.py  user_schema.py
backend/app/services/: character_service.py  title_service.py  user_service.py
backend/app/services/errors/: user_errors.py
backend/tests/: __init__.py  character_test.py  title_test.py  user_test.py
backend/tests/v1/: test_users.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  app.css
frontend/src/components/: AuthForm.tsx
frontend/src/events/: AuthHandler.tsx
frontend/src/pages/: Home.tsx
frontend/src/routes/: +page.svelte
frontend/src/stores/: AuthStore.tsx
